--- a/src/libcharon/plugins/vici/python/Makefile.am
+++ b/src/libcharon/plugins/vici/python/Makefile.am
@@ -8,21 +8,21 @@ EXTRA_DIST = LICENSE MANIFEST.in \
 	vici/protocol.py \
 	vici/session.py
 
-setup.py: $(srcdir)/setup.py.in
+$(srcdir)/setup.py: $(srcdir)/setup.py.in
 	$(AM_V_GEN) sed \
 	-e "s:@EGG_VERSION@:$(PACKAGE_VERSION):" \
 	$(srcdir)/setup.py.in > $@
 
 all-local: dist/vici-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg
 
-dist/vici-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg: $(EXTRA_DIST) setup.py
+dist/vici-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg: $(EXTRA_DIST) $(srcdir)/setup.py
 	(cd $(srcdir); $(PYTHON) setup.py bdist_egg \
 		-b $(shell readlink -f $(builddir))/build \
 		-d $(shell readlink -f $(builddir))/dist)
 
-clean-local: setup.py
-	$(PYTHON) setup.py clean -a
-	rm -rf vici.egg-info dist setup.py
+clean-local:
+	(cd $(srcdir); [ ! -f setup.py ] || $(PYTHON) setup.py clean -a)
+	rm -rf $(srcdir)/setup.py $(srcdir)/vici.egg-info $(builddir)/dist
 
 install-exec-local: dist/vici-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg
 	$(EASY_INSTALL) $(PYTHONEGGINSTALLDIR) \
