vici: Just copy Ruby Gem and Python Egg, don't attempt to install them
Installing them might not work well when building distro packages (e.g.
with DESTDIR installs). It might be easier to install them later with a
script in the distro package.

 #914

--- a/src/libcharon/plugins/vici/ruby/Makefile.am
+++ b/src/libcharon/plugins/vici/ruby/Makefile.am
@@ -15,10 +15,4 @@ all-local: vici-$(PACKAGE_VERSION).gem
 clean-local:
 	rm -f vici.gemspec vici-$(PACKAGE_VERSION).gem
 
-install-data-local: vici-$(PACKAGE_VERSION).gem
-	$(GEM) install --install-dir $(DESTDIR)$(RUBYGEMDIR) \
-		vici-$(PACKAGE_VERSION).gem
-
-uninstall-local:
-	$(GEM) uninstall --install-dir $(DESTDIR)$(RUBYGEMDIR) \
-		--version $(PACKAGE_VERSION) vici
+rubygem_DATA = vici-$(PACKAGE_VERSION).gem
